# ramps1-3

./: Mendel-m4-assembly-data-sheet (1).ods  Thumbs.db
electronica/reprap-extruder-controller-2.2/gerber/: BottomCream.pho  ComponentTraces.pho  CopperTraces.pho  SilkScreen.pho  SolderMaskComponent.pho  SolderMaskCopper.pho  TopCream.pho  extruder-controller.drd
electronica/reprap-extruder-controller-2.2/ps/: BottomCream.ps  ComponentSilkscreen.ps  ComponentTraces.ps  CopperSilkscreen.ps  CopperTraces.ps  Schematic.ps  TopCream.ps
electronica/reprap-motherboard-1.2/gerber/: BottomCream.pho  ComponentTraces.pho  CopperTraces.pho  SilkScreen.pho  SolderMaskComponent.pho  SolderMaskCopper.pho  TopCream.pho  motherboard.drd
electronica/reprap-motherboard-1.2/pdf/: Thumbs.db
electronica/reprap-motherboard-1.2/png/: Thumbs.db
electronica/reprap-motherboard-1.2/ps/: BottomCream.ps  ComponentSilkscreen.ps  ComponentTraces.ps  CopperSilkscreen.ps  CopperTraces.ps  Schematic.ps  TopCream.ps
electronica/reprap-motherboard-1.2/renders/: Thumbs.db  motherboard.pov
electronica/reprap-stepper-motor-driver-2.3/gerber/: ComponentTraces.pho  CopperTraces.pho  SilkScreen.pho  (+3 more)
mecanica/Cartesian Bot 1.0.6/: README.txt  Solid-Edge-files-release-agreement.txt  Thumbs.db
mecanica/printed-parts/: gearbox-bracket.stl  gearbox-fringe.stl  gearbox-housing.stl  gearbox-motor-coupling.stl  gearbox-output-coupling.stl  optobracket-readme.txt  quickfit-clamp.stl
mecanica/tech-drawings/: Thumbs.db
mendel/electronics/: Thumbs.db
mendel/firmware/: CMakeLists.txt
src/lib/: Thumbs.db
(+419 files in other folders)
